--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,11 @@ body{
 }
 
 i.icon{
-    display: block;
+    display: inline-block;
     width: 12px;
     height: 12px;
     background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .icon-calendar{
