--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,79 @@ header .today-date span{
 header .today-date .icon{
     margin-right: auto;
 }
+
+article{
+    background-color: white;
+    padding: 40px 25px;
+    border-radius: 10px;
+    min-height: calc(100vh - 220px);
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,.2);
+}
+
+article h2{
+    display: inline-block;
+    border-bottom: 3px solid #5bbf95;
+    padding-bottom: 5px;
+    margin-bottom: 40px;
+    font-weight: bold;
+}
+
+.highlight{
+    color: #895f86;
+}
+
+.registrations-table{
+    width:100%;
+    border-collapse: collapse
+}
+
+.registrations-table th{
+    text-transform: capitalize;
+    position: relative;
+    border-bottom: 2px solid #333333;
+    padding-bottom: 6px;
+    text-align: left;
+    padding-left: 5px;
+    padding-right: 20px;
+}
+
+.registrations-table td{
+    padding: 10px 0;
+    box-sizing: border-box;
+    min-height: 26px;
+    font-size: 12px;
+    padding-left: 5px;
+}
+
+.registrations-table tr td{
+    background-color: #fff;    
+}
+
+.registrations-table tr:nth-of-type(odd) td{
+    background-color: #f9fafb;
+}
+
+.capitalize {
+    text-transform: capitalize;
+}
+
+
+.icon-caret{
+    background-image: url(../assets/dropdown.svg);
+}
+
+.registrations-table th .icon-caret{
+    position: absolute;
+    right: 10px;
+    top: 7px;
+}
+
+.registrations-table .icon-status{
+    background-image: url(../assets/pending.svg); 
+    margin-right: 5px;
+    vertical-align: -2px;   
+}
+
+.registrations-table .approved .icon-status{
+    background-image: url(../assets/approved.svg);    
+}
