--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: EagleBook;
+    font-weight: bold;
+    src: url("eagle-book.otf") format("opentype");
+}
+
 html {
     margin: 0;
     padding: 0;
@@ -80,6 +86,7 @@ article h2 {
     padding-bottom: 5px;
     margin-bottom: 40px;
     font-weight: bold;
+    font-family: EagleBook
 }
 
 .highlight {
