add even and odd row styles

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ article h2 {
     padding-left: 5px;
 }
 
-.registrations-table tr td {
+.registrations-table tr:nth-of-type(even) td {
     background-color: #fff;
 }
 
