link to "consent form photo" if the registration is completed

--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,7 @@ article h2 {
 .registrations-table .approved .icon-status {
     background-image: url(../assets/approved.svg);
 }
+
+a{
+    cursor: pointer;
+}
